--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/BiancaLSO/TravelDestinations/issues"
   },
-  "homepage": "https://github.com/BiancaLSO/TravelDestinations#readme"
+  "homepage": "https://github.com/BiancaLSO/TravelDestinations#readme",
+  "dependencies": {
+    "express": "^4.18.1"
+  }
 }
