--- a/package.json
+++ b/package.json
@@ -17,10 +17,19 @@
   },
   "homepage": "https://github.com/BiancaLSO/TravelDestinations#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.10.0",
-    "mongoose": "^6.6.2"
+    "mongoose": "^6.6.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/passport": "^1.0.11"
   }
 }
